# InternalMedia

./: pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: routers.py
app/db/: crud.py  models.py
