[tool.poetry]
name = "internal-media"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
patisson-applauncher = {git = "https://github.com/Patisson-Company/_AppLauncher", extras = ["async_fastapi_pack"]}
patisson-request = {git = "https://github.com/Patisson-Company/_Request"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
python-ulid = "^3.0.0"
syncpg = "^1.1.3"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
